20090611 code: more style check updates.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,4 @@
 20090215 version: gnatver 0.0.3
 20090215 code: strict style checks.
 20090215 code: ver_gnat.sh emits code to pass strict style checks.
+20090611 code: more style check updates.
